경북대 BE 김동규 3단계 - 배포 (#291)
* feat: cors설정 및 테스트 코드 작성

* docs: step3 구현사항 작성

* feat: memberNotFound 예외 추가

* feat: notKakaoMember 예외 추가

* feat: data.sql 삭제

* feat: 배포 스크립트 작성

---------

Co-authored-by: eastgyu11 <eastgyu11>